--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,3 +1,15 @@
 H1 {
 	color: blue;
 }
+
+
+.grid {
+    border: 1px solid #ccc;
+    border-width: 1px 0 0 1px;
+}
+
+.gridcell {
+    border: 1px solid #ccc;
+    border-width: 0 1px 1px 0;
+    float: left;
+}
